--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     />
     <style>
       body {
-        font-family: Roboto, sans-serif;
+        font-family: "Roboto", sans-serif;
       }
     </style>
   </head>
